styling in about and minor adjustments to components

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "San",
-    "slug": "San",
+    "name": "SanJoseCafe",
+    "slug": "SanJoseCafe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
